// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test One Tag 1`] = `
<div
  className="Pinpoint Tag Bar "
>
  <div
    className="Pinpoint Tag Item   "
  >
    test-1
  </div>
</div>
`;

exports[`Test Removable 1`] = `
<div
  className="Pinpoint Tag Bar "
>
  <div
    className="Pinpoint Tag Item   "
  >
    test-1
    <span
      className="icon"
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        height={12}
        role="img"
        viewBox="0 0 320 512"
        width={7.5}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    className="Pinpoint Tag Item   "
  >
    test-2
    <span
      className="icon"
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        height={12}
        role="img"
        viewBox="0 0 320 512"
        width={7.5}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
  <div
    className="Pinpoint Tag Item   "
  >
    test-3
    <span
      className="icon"
    >
      <svg
        aria-hidden="true"
        data-icon="times"
        data-prefix="far"
        focusable="false"
        height={12}
        role="img"
        viewBox="0 0 320 512"
        width={7.5}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M207.6 256l107.72-107.72c6.23-6.23 6.23-16.34 0-22.58l-25.03-25.03c-6.23-6.23-16.34-6.23-22.58 0L160 208.4 52.28 100.68c-6.23-6.23-16.34-6.23-22.58 0L4.68 125.7c-6.23 6.23-6.23 16.34 0 22.58L112.4 256 4.68 363.72c-6.23 6.23-6.23 16.34 0 22.58l25.03 25.03c6.23 6.23 16.34 6.23 22.58 0L160 303.6l107.72 107.72c6.23 6.23 16.34 6.23 22.58 0l25.03-25.03c6.23-6.23 6.23-16.34 0-22.58L207.6 256z"
          fill="currentColor"
        />
      </svg>
    </span>
  </div>
</div>
`;

exports[`Test Three Tags 1`] = `
<div
  className="Pinpoint Tag Bar "
>
  <div
    className="Pinpoint Tag Item   "
  >
    test-1
  </div>
  <div
    className="Pinpoint Tag Item   "
  >
    test-2
  </div>
  <div
    className="Pinpoint Tag Item   "
  >
    test-3
  </div>
</div>
`;

exports[`Test Two Tags 1`] = `
<div
  className="Pinpoint Tag Bar "
>
  <div
    className="Pinpoint Tag Item   "
  >
    test-1
  </div>
  <div
    className="Pinpoint Tag Item   "
  >
    test-2
  </div>
</div>
`;
